[package]
name = "rex-shim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.155"

[dependencies]
libloading = "0.8.3"
